2014-06-26  Glenn Morris  <rgm@gnu.org>

	* progmodes/idlw-shell.el (idlwave-shell-make-temp-file):
	Optimize away code unneeded on any modern Emacs.

	* emacs-lisp/authors.el: Move to ../admin.

	* emacs-lisp/ert.el (ert-summarize-tests-batch-and-exit): New.

2014-06-25  Glenn Morris  <rgm@gnu.org>

	* Makefile.in ($(lisp)/progmodes/cc-defs.elc)
	($(lisp)/progmodes/cc-fonts.elc, $(lisp)/progmodes/cc-langs.elc)
	($(lisp)/progmodes/cc-vars.elc): Drop hand-written deps on non-cc
	files.  They are not relevant to the original issue (bug#1004),
	and cause unnecessary recompilation (bug#2151).

2014-06-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* play/landmark.el: Use lexical-binding and avoid `intangible'.
	(landmark--last-pos): New var.
	(landmark--intangible-chars): New const.
	(landmark--intangible): New function.
	(landmark-mode, landmark-move): Use it.
	(landmark-mode): Remove properties.
	(landmark-plot-square, landmark-point-square, landmark-goto-xy)
	(landmark-cross-qtuple):
	Don't worry about `intangible' any more.
	(landmark-click, landmark-point-y): Same; and don't assume point-min==1.
	(landmark-init-display): Don't set `intangible' and `point-entered'.
	(square): Remove.  Inline it instead.
	(landmark--distance): Rename from `distance'.
	(landmark-calc-distance-of-robot-from): Rename from
	calc-distance-of-robot-from.
	(landmark-calc-smell-internal): Rename from calc-smell-internal.

2014-06-25  Dmitry Antipov  <dmantipov@yandex.ru>

	* files.el (dir-locals-find-file, file-relative-name):
	* info.el (Info-complete-menu-item):
	* minibuffer.el (completion-table-subvert): Prefer string-prefix-p
	to compare-strings to avoid out-of-range errors.
	* subr.el (string-prefix-p): Adjust to match strict range
	checking in compare-strings.

2014-06-24  Leonard Randall  <leonard.a.randall@gmail.com>  (tiny change)

	* textmodes/reftex-parse.el (reftex-using-biblatex-p): Make search
	for comment lines non-greedy and stopping at newlines to fix stack